k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placement-tracker
  labels:
    name: placement-tracker
